// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`link hoists an enable directive 1`] = `
"enable f16;

    fn _01_main() -> vec4<f32> { return vec4<f32>(1.0, 0.0, 1.0, 1.0); }
    

    fn main() -> @location(0) vec4<f32> {
      return _01_main();
    }
    "
`;

exports[`link lifts recursive dependency 1`] = `
"
    // Lifted Code
    fn _01_getLifted() {};
    

    fn _02_getColor2() -> vec4<f32> { return vec4<f32>(1.0, 0.0, 1.0, 1.0); }
    

    fn _03_getColor1() -> vec4<f32> { return _02_getColor2(); }
    

    fn main() -> vec4<f32> {
      return _03_getColor1();
    }
    "
`;

exports[`link links a global across a module 1`] = `
"
    fn getPosition(index: i32) -> vec4<f32> { return vec4<f32>(1.0, 0.0, 1.0, 1.0); }
    

    fn _02_getPosition() {};
    
    fn _02_getColor(index: i32) -> vec4<f32> {
      _02_getPosition();
      return vec4<f32>(1.0, 0.0, 1.0, 1.0);
    }
    

    fn main() {
      var a = getPosition(0);
    }
    "
`;

exports[`link links a struct and field 1`] = `
"
    struct _01_Foo { bar: f32 };
    fn _01_access(foo: _01_Foo) -> f32 { return foo.bar; }


    fn main() {
      var a = getPosition(0);
    }
    "
`;

exports[`link links an external 1`] = `
"
    fn _01_main() -> vec4<f32> { return vec4<f32>(1.0, 0.0, 1.0, 1.0); }
    

    fn main() -> @location(0) vec4<f32> {
      return _01_main();
    }
    "
`;

exports[`link links quad vertex 1`] = `
"

const _01_QUAD: array<vec2<i32>, 4> = array<vec2<i32>, 4>(
  vec2<i32>(0, 0),
  vec2<i32>(1, 0),
  vec2<i32>(0, 1),
  vec2<i32>(1, 1),
);

fn _01_getQuadIndex(vertex: i32) -> vec2<i32> {
  return _01_QUAD[vertex];
}

fn _01_getQuadUV(vertex: i32) -> vec2<f32> {
  return vec2<f32>(_01_getQuadIndex(vertex));
}



struct _02_SolidVertex {
  position: vec4<f32>,
  color: vec4<f32>,
  uv: vec2<f32>,
};



struct _03_ViewUniforms {
  projectionMatrix: mat4x4<f32>,
  viewMatrix: mat4x4<f32>,
  viewPosition: vec4<f32>,
  viewResolution: vec2<f32>,
  viewSize: vec2<f32>,
  viewWorldDepth: f32,
  viewPixelRatio: f32,
};

@group(VIEW) @binding(VIEW) var<uniform> _03_viewUniforms: _03_ViewUniforms;

fn _03_worldToView(position: vec4<f32>) -> vec4<f32> {
  return _03_viewUniforms.viewMatrix * position;
}

fn _03_viewToClip(position: vec4<f32>) -> vec4<f32> {
  return _03_viewUniforms.projectionMatrix * position;
}

fn _03_worldToClip(position: vec4<f32>) -> vec4<f32> {
  return _03_viewToClip(_03_worldToView(position));
}

fn _03_getPerspectiveScale(w: f32, f: f32) -> f32 {
  var m = _03_viewUniforms.projectionMatrix;
  var worldScale = m[1][1] * _03_viewUniforms.viewWorldDepth;
  var clipScale = mix(1.0, worldScale / w, f);
  var pixelScale = clipScale * _03_viewUniforms.viewPixelRatio;
  return pixelScale;
}


    fn _04_getPosition(index: i32) -> vec4<f32> { return vec4<f32>(1.0, 0.0, 1.0, 1.0); }
    

    fn _05_getColor(index: i32) -> vec4<f32> { return vec4<f32>(1.0, 0.0, 1.0, 1.0); }
    

    fn _06_getSize(index: i32) -> f32 { return 1.0; }
    

    fn _07_getDepth(index: i32) -> f32 { return 0.5; }
    

fn getQuadVertex(vertexIndex: i32, instanceIndex: i32) -> _02_SolidVertex {
  var position = _04_getPosition(instanceIndex);
  var color = _05_getColor(instanceIndex);
  var size = _06_getSize(instanceIndex);
  var depth = _07_getDepth(instanceIndex);

  var center = _03_worldToClip(position);

  var uv = _01_getQuadUV(vertexIndex);
  var xy = uv * 2.0 - 1.0;

  // Lerp between fixed size and full perspective.
  var pixelScale = _03_getPerspectiveScale(center.w, depth);
  // TODO: awaiting compound support
  //size *= pixelScale;
  size = size * pixelScale;

  if (HAS_EDGE_BLEED) {
    xy = xy * (size + 0.5) / size;
    uv = xy * .5 + .5;
  }

  // TODO: awaiting compound support
  //center.xy += xy * size * viewUniforms.viewResolution * center.w;
  center = vec4<f32>(center.xy + xy * size * _03_viewUniforms.viewResolution * center.w, center.zw);

  return _02_SolidVertex(
    center,
    color,
    uv
  );
}
"
`;

exports[`link links same module twice with different entry point 1`] = `
"
    fn _01_used() -> f32 { return 1.0; }
    
    fn _01_getPosition(index: i32) -> vec4<f32> { return vec4<f32>(_01_used(), 0.0, 1.0, 1.0); }

    fn _01_getColor(index: i32) -> vec4<f32> { return vec4<f32>(_01_used(), 0.0, 1.0, 1.0); }
    

    fn main() {
      var a = _01_getPosition(0);
      var b = _01_getColor(0);
    }
    "
`;

exports[`link substitutes attributes 1`] = `
"
    fn _01_getColor() -> vec4<f32> { return vec4<f32>(1.0, 0.0, 1.0, 1.0); }
    

    @group(0) @binding(0) var<uniform> color: vec4<f32>;

    fn main() -> @location(0) vec4<f32> {
      return _01_getColor() + color;
    }
    "
`;

exports[`link tree shakes around identifiers 1`] = `
"
    fn _01_used() -> f32 { return 1.0; }
fn _01_getPosition(index: i32) -> vec4<f32> { return vec4<f32>(_01_used(), 0.0, 1.0, 1.0); }

    

    fn main() {
      var a = _01_getPosition(0);
    }
    "
`;

exports[`link tree shakes around identifiers 2`] = `
"
    fn _01_used() -> f32 { return 1.0; }
fn _01_getPosition(index: i32) -> vec4<f32> { return vec4<f32>(_01_used(), 0.0, 1.0, 1.0); }

    

    fn main() {
      var a = _01_getPosition(0);
    }
    "
`;

exports[`link tree shakes constants 1`] = `
"
    const _01_colorUsed = vec4<f32>(0.0, 0.1, 0.2, 0.0);
fn _01_getColor() -> vec4<f32> {
      return _01_colorUsed;
    }
    

    fn main() {
      var a = _01_getColor();
    }
    "
`;

exports[`link tree shakes constants 2`] = `
"
    const _01_colorUsed = vec4<f32>(0.0, 0.1, 0.2, 0.0);
fn _01_getColor() -> vec4<f32> {
      return _01_colorUsed;
    }
    

    fn main() {
      var a = _01_getColor();
    }
    "
`;
